Canary-deployment/app/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canary-app
spec:
  host: canary-app
  subsets:
  - name: v1
    labels:
      version: v1.0
  - name: v2
    labels:
      version: v1.1
