Canary-deployment/app/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - canary-gateway
  http:
  - match:
    - headers:
        -user-agent:
           regex: .*bot.*
  - route:
    - destination:
        host: canary-app
        subset: v1
      weight: 100
  - route:
    - destination:
        host: canary-app
        subset: v1
      weight: 80
    - destination:
        host: canary-app
        subset: v2
      weight: 20
